--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ body{
     text-align: center;
     width: 70%;
 }
-#start{
+#begin{
     margin-top: 50px;
     padding: 5px 20px;
     background-color: var(--green);
@@ -59,7 +59,7 @@ body{
     letter-spacing: 3px;
     border: 3px solid white;
 }
-#start:hover{
+#begin:hover{
     color: black;
     background-color: white;
 
