working code for display properties **fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,19 +65,7 @@ body{
 
 }
 
-/* NEXT SECTION */
+/* QUESTIONS */
 #questionOne{
-    display: none;
-}
-#questionTwo{
-    display: none;
-}
-#questionThree{
-    display: none;
-}
-#questionFour{
-    display: none;
-}
-#questionFive{
     display: none;
 }
