--- a/assets/style.css
+++ b/assets/style.css
@@ -5,23 +5,22 @@
     font-family:'Courier New', Courier, monospace;
 }
 :root {
-    --green:rgb(85, 180, 149);
+    --green:rgb(42, 255, 184);
 }
 body{
-    background-color: rgb(55, 55, 55);
-}
-#homescreen{
-    margin-top: 40px;
+    background-color: black;
 }
 #timer-div{
     padding: 10px 20px;
-    border: 3px solid white;
+    border: 4px solid white;
     border-radius: 10px;
     float: right;
     margin-right: 50px;
     margin-bottom: 200px;
     background-color: var(--green);
     font-size: 20px;
+    color: black;
+    margin-top: 40px;
 }
 .welcome{
     
@@ -57,15 +56,43 @@ body{
     font-size: 30px;
     font-weight: 600;
     letter-spacing: 3px;
-    border: 3px solid white;
+    border: 4px solid white;
+    color: black;
 }
 #begin:hover{
     color: black;
-    background-color: white;
+    background-color: rgb(30, 171, 124);
 
 }
 
 /* QUESTIONS */
 #first{
     display: none;
+    clear: both;
+    width: 75%;
+    margin: 0 100px;
+}
+ul li{
+    list-style-type: none;
+}
+
+#first ul li button{
+    padding: 10px 100px;
+    color: black;
+    border: 2px solid white;
+    border-radius: 10px;
+    background-color: var(--green);
+    font-size: 20px;
+    margin-top: 15px;
+    font-weight: 600;
+
+}
+#first ul li button:hover{
+    padding: 10px 100px;
+
+    border: 2px solid white;
+    border-radius: 10px;
+    background-color: white;
+
+
 }
