--- a/assets/style.css
+++ b/assets/style.css
@@ -122,5 +122,28 @@ ul li{
 
 
 #results{
+    clear:both;
     display: none;
+    margin-top: 130px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#results h3{
+    margin-top: 20px;
+}
+#startOver{
+    margin-top: 50px;
+    padding: 5px 20px;
+    background-color: var(--green);
+    border-radius: 10px;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 3px;
+    border: 4px solid white;
+    color: black;
+}
+#startOver:hover{
+    color: black;
+    background-color: var(--darkGreen);
 }
