--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,9 @@ body{
     color: black;
     margin-top: 40px;
 }
+#timer{
+    color: black;
+}
 .welcome{
     
     display: flex;
@@ -131,19 +134,4 @@ ul li{
 }
 #results h3{
     margin-top: 20px;
-}
-#startOver{
-    margin-top: 50px;
-    padding: 5px 20px;
-    background-color: var(--green);
-    border-radius: 10px;
-    font-size: 30px;
-    font-weight: 600;
-    letter-spacing: 3px;
-    border: 4px solid white;
-    color: black;
-}
-#startOver:hover{
-    color: black;
-    background-color: var(--darkGreen);
 }
