--- a/assets/style.css
+++ b/assets/style.css
@@ -156,12 +156,29 @@ ul li{
     margin-top: 20px;
     padding: 5px 10px;
     color: black;
-    background-color: white;
+    background-color: var(--green);
     font-size: 20px;
     font-weight: 600;
-    border: 5px solid white;
+    border: 4px solid var(--green);
     border-radius: 10px;
 }
 #submitButton:hover{
-    background-color: var(--darkGreen);
+    color: white;
+    background-color: black;
 }
+#startOver{
+    margin-top: 70px;
+    font-size: 15px;
+    padding: 10px 20px;
+    color: black;
+    background-color: white;
+    outline: none;
+    border: 4px solid white;
+    border-radius: 10px;
+    font-weight: 600;
+}
+#startOver:hover{
+    color: white;
+    background-color: black;
+}
+
