--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ body{
 /* INTRO -------------------------------------------------- */
 #timer-div{
     padding: 10px 20px;
-    border: 4px solid white;
+    border: 4px solid var(--green);
     border-radius: 10px;
     float: right;
     margin-right: 50px;
@@ -62,12 +62,12 @@ body{
     font-size: 30px;
     font-weight: 600;
     letter-spacing: 3px;
-    border: 4px solid white;
+    border: 4px solid var(--green);
     color: black;
 }
 #begin:hover{
-    color: black;
-    background-color: var(--darkGreen);
+    color: var(--green);
+    background-color: black;
 
 }
 
@@ -107,8 +107,9 @@ ul li{
 }
 .questionClass ul li button{
     padding: 10px 100px;
+    width: 600px;
     color: black;
-    border: 2px solid white;
+    border: 2px solid var(--green);
     border-radius: 10px;
     background-color: var(--green);
     font-size: 20px;
@@ -118,7 +119,7 @@ ul li{
 }
 .questionClass ul li button:hover{
     padding: 10px 100px;
-    border: 2px solid white;
+    border: 5px solid var(--green);
     border-radius: 10px;
     background-color: var(--darkGreen);
 }
@@ -163,7 +164,7 @@ ul li{
     border-radius: 10px;
 }
 #submitButton:hover{
-    color: white;
+    color: var(--green);
     background-color: black;
 }
 #startOver{
